
* LUCENE-3468: Replaced last() and remove() with pollLast() in
             FirstPassGroupingCollector (Martijn van Groningen)

======================= Lucene 3.6.0 ================

Changes in backwards compatibility policy

 * LUCENE-3626: The internal implementation classes in PKIndexSplitter
   and MultiPassIndexSplitter were made private as they now work
   per segment.  (Uwe Schindler)

New Features

 * LUCENE-3596: DirectoryTaxonomyWriter extensions can override createIndexWriterConfig()
   and modify how its internal index writer is opened. (Doron Cohen)

 * SOLR-2982: Added phonetic encoders to contrib/analyzers/phonetic:
   Metaphone, Soundex, Caverphone, Beider-Morse, etc.  (Robert Muir)

 * LUCENE-2906: Added CJKBigramFilter that forms bigrams from StandardTokenizer or
   ICUTokenizer CJK tokens, and CJKWidthFilter that normalizes halfwidth/fullwidth.
   This filter supports unicode supplementary characters and you can toggle whether
   bigrams are formed for each of Han/Hiragana/Katakana/Hangul independently. Deprecates
   CJKTokenizer.  (Tom Burton-West, Robert Muir)

 * LUCENE-3634: IndexReader's static main method was moved to a new
   tool, CompoundFileExtractor, in contrib/misc.  (Mike McCandless)

 * SOLR-3020: Add KeywordAttribute support to HunspellStemFilter. Terms marked as
   keywords are not modified by the stemmer. (Simon Willnauer, Helge Jenssen)

 * LUCENE-3305: Added Kuromoji morphological analyzer for Japanese.
   (Christian Moen, Masaru Hasegawa, Simon Willnauer, Uwe Schindler, Mike McCandless, Robert Muir)

 * LUCENE-3685: Add ToChildBlockJoinQuery and renamed previous
   BlockJoinQuery to ToParentBlockJoinQuery, so that you can now do
   joins in both parent to child and child to parent directions.
   (Mike McCandless)

API Changes

 * LUCENE-3596: DirectoryTaxonomyWriter.openIndexWriter() now takes an
   openIndexWriter parameter rather than just an open-mode. (Doron Cohen)
